# MicroEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  enginedoc  format.sh
.github/workflows/: main.yml
engine/assets/: engine_config.xml
engine/assets/clock/: tp.tps  tp.xml
engine/docs/: CreatingTextures.md  GameModuleHelp.md  SpriteAnimations.md  TexturePipeline.md  UsingTextures.md  arch.txt
engine/include/: AFont.h  APlatform.h  ARenderable.h  ARenderer.h  ASprite.h  AText.h  ATexture.h  AbstractFactory.h  Asset.h  ConfigFile.h  DrawShapeHelper.h  GameEngine.h  GameEngineInitParams.h  GameInput.h  GameModule.h  Geometry.h  RenderableObject.h  ResourceManager.h  TextureRepository.h  TickTimer.h  Viewport.h  apidef.h  core.h  gameengine.h  gamemodule.h  microengine.h  renderer.h  sprite.h  test.h  texture.h
engine/include/Cocoa/: CocoaAppDelegate.h  CocoaFont.h  CocoaKeyboard.h  CocoaMouse.h  CocoaPlatform.h  CocoaRenderer.h  CocoaText.h  CocoaTexture.h
engine/include/Config/: FileConfigProvider.h  IConfigProvider.h  InMemoryProvider.h
engine/include/Controls/: CBaseControl.h  CButton.h  CLabel.h
engine/include/Debugging/: DebugLayer.h
engine/include/Events/: Event.h
engine/include/Filesystem/: XDirectory.h  XFile.h
engine/include/FormatLoaders/: FrameListLoader.h  TPXmlReader.h
engine/include/Game/: Game.h  GameObject.h  Tilemap.h
engine/include/Game/Navigation/: ITraversable.h
engine/include/Game/Physics/: Physics.h
engine/include/Input/: AKeyboard.h  AMouse.h  Keys.h
engine/include/Rendering/: AFont.h  APlatform.h  ARenderer.h  ASprite.h  AText.h  ATexture.h  AbstractFactory.h  RenderableObject.h
engine/include/Rendering/NullRenderer/: NullFont.h  NullKeyboard.h  NullMouse.h  NullPlatform.h  NullRenderer.h  NullText.h  NullTexture.h
engine/include/Rendering/SDL/: SDLFont.h  SDLKeyboard.h  SDLMouse.h  SDLPlatform.h  SDLRenderer.h  SDLText.h  SDLTexture.h
engine/include/SDL/: SDLFont.h  SDLKeyboard.h  SDLMouse.h  SDLPlatform.h  SDLRenderer.h  SDLSprite.h  SDLText.h  SDLTexture.h  SDLTextureRepository.h
engine/lib/SDL/windows/include/SDL2/: SDL_audio.h  SDL_joystick.h  SDL_revision.h  SDL_stdinc.h  SDL_test.h  SDL_test_crc32.h  SDL_thread.h  SDL_version.h
engine/src/: AFont.cpp  AMouse.cpp  APlatform.cpp  ARenderable.cpp  ARenderer.cpp  ASprite.cpp  AText.cpp  ATexture.cpp  AbstractFactory.cpp  Asset.cpp  ConfigFile.cpp  DrawShapeHelper.cpp  GameEngine.cpp  GameModule.cpp  ResourceManager.cpp  TextureRepository.cpp  TickTimer.cpp  Viewport.cpp  gameengine.cpp  gamemodule.cpp  renderer.cpp  sprite.cpp  test.cpp  texture.cpp
engine/src/Cocoa/: CocoaAppDelegate.cpp  CocoaFont.cpp  CocoaKeyboard.cpp  CocoaMouse.cpp  CocoaPlatform.cpp  CocoaRenderer.cpp  CocoaText.cpp  CocoaTexture.cpp
engine/src/Config/: FileConfigProvider.cpp  IConfigProvider.cpp  InMemoryProvider.cpp
engine/src/Controls/: CBaseControl.cpp  CButton.cpp  CLabel.cpp
engine/src/Debugging/: DebugLayer.cpp
engine/src/Filesystem/: XDirectory.cpp  XFile.cpp
engine/src/FormatLoaders/: FrameListLoader.cpp  TPXmlReader.cpp
engine/src/Game/: GameObject.cpp  Tilemap.cpp
engine/src/Game/Physics/: Physics.cpp
engine/src/Input/: AMouse.cpp
engine/src/Rendering/: AFont.cpp  APlatform.cpp  ARenderer.cpp  ASprite.cpp  AText.cpp  ATexture.cpp  AbstractFactory.cpp  RenderableObject.cpp
engine/src/Rendering/NullRenderer/: NullFont.cpp  NullKeyboard.cpp  NullMouse.cpp  NullPlatform.cpp  NullRenderer.cpp  NullRendererRenderer.cpp  NullText.cpp  NullTexture.cpp
engine/src/Rendering/SDL/: SDLFont.cpp  SDLKeyboard.cpp  SDLMouse.cpp  SDLPlatform.cpp  SDLRenderer.cpp  SDLText.cpp  SDLTexture.cpp
engine/src/SDL/: SDLFont.cpp  SDLKeyboard.cpp  SDLMouse.cpp  SDLPlatform.cpp  SDLRenderer.cpp  SDLSprite.cpp  SDLText.cpp  SDLTexture.cpp  SDLTextureRepository.cpp
projects/rpg-game/: OverworldGameModule.cpp  OverworldGameModule.h  main.cpp
projects/rpg-game/Framework/: Tile.h  Tilemap.cpp  Tilemap.h
projects/rpg-game/Framework/World/: WorldMap.cpp  WorldMap.h
projects/tester/: DinoCharacter.cpp  DinoCharacter.h  GameTestModule.cpp  GameTestModule.h  TextureTestModule.cpp  TextureTestModule.h  Tilemap.cpp  Tilemap.h  main.cpp
tools/scaffolder/: Cargo.toml
tools/scaffolder/src/: main.rs
tools/scaffolder/templates/: module.cpp.txt  module.h.txt
